--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Графік відключень світла для Групи 5</title>
+    <title>Графік відключень світла</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Графік відключень світла для Групи 5</h1>
+        <h1>Графік відключень світла</h1>
+        <select id="groupSelect"></select>
         <select id="daySelect"></select>
         <div class="timeline" id="timeline"></div>
         <div class="time-labels">
